// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resetEnv 1`] = `
Map {
  "RUNME_TASK" => "true",
  "foo" => "bar",
}
`;

exports[`resetEnv 2`] = `
Map {
  "RUNME_TASK" => "true",
  "PATH" => "/usr/bin",
}
`;
